--- a/presentes.css
+++ b/presentes.css
@@ -361,8 +361,8 @@ body {
     width: auto !important;    /* Tamanho automático para não empurrar o R$ */
     max-width: 160px;          /* Limita largura para não quebrar */
     
-    text-align: left !important; /* Número fica encostado no R$ */
-    font-size: 24px !important;
+    text-align: center !important; /* Número fica encostado no R$ */
+    font-size: 20px !important;
     font-weight: 700 !important;
     color: #000 !important;
     padding: 0 !important;
